# meltingpot

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
examples/: requirements.in
examples/gym/: utils.py
examples/rllib/: self_play_train.py  self_play_train_api_stack.py  self_play_train_v2.py  utils.py
