[project]
name = "meltingpot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.2.1",
    "astroid==3.3.9",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "attrs==25.3.0",
    "backcall==0.2.0",
    "backports-tarfile==1.2.0",
    "beautifulsoup4==4.13.3",
    "black==24.10.0",
    "bleach==6.2.0",
    "build==1.2.2.post1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "chex==0.1.89",
    "click==8.1.8",
    "cryptography==44.0.2",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.3.9",
    "dm-env==1.6",
    "dm-tree==0.1.8",
    "dmlab2d==1.0.0",
    "docopt==0.6.2",
    "docutils==0.21.2",
    "execnet==2.1.1",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "flatbuffers==25.2.10",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.71.0",
    "gymnasium>=1.0.0",
    "h5py==3.13.0",
    "id==1.5.0",
    "idna==3.10",
    "immutabledict==4.2.1",
    "importlab==0.8.1",
    "importlib-metadata==8.6.1",
    "iniconfig==2.1.0",
    "ipython==8.12.3",
    "isort==6.0.1",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jax==0.5.3",
    "jaxlib==0.5.3",
    "jedi==0.19.2",
    "jeepney==0.9.0",
    "jinja2==3.1.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-pygments==0.3.0",
    "keras==3.9.1",
    "keyring==25.6.0",
    "libclang==18.1.1",
    "libcst==1.7.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.1",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "ml-collections==1.0.0",
    "ml-dtypes==0.5.1",
    "more-itertools==10.6.0",
    "msgspec==0.19.0",
    "mypy-extensions==1.0.0",
    "namex==0.0.8",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "networkx==3.4.2",
    "nh3==0.2.21",
    "ninja==1.11.1.4",
    "numpy==2.1.3",
    "opencv-python==4.11.0.86",
    "opt-einsum==3.4.0",
    "optree==0.14.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pettingzoo>=1.24.3",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pip-tools==7.4.1",
    "pipreqs==0.5.0",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.50",
    "protobuf==5.29.4",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycnite==2024.7.31",
    "pycparser==2.22",
    "pydot==3.0.4",
    "pygame==2.6.1",
    "pygments==2.19.1",
    "pyink==24.10.1",
    "pylint==3.3.6",
    "pyparsing==3.2.3",
    "pyproject-hooks==1.2.0",
    "pytest==8.3.5",
    "pytest-xdist==3.6.1",
    "python-dateutil==2.9.0.post0",
    "pytype==2024.10.11",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "ray[default,rllib]>=2.44.1",
    "reactivex==4.0.4",
    "readme-renderer==44.0",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==14.0.0",
    "rpds-py==0.24.0",
    "scipy==1.15.2",
    "secretstorage==3.3.3",
    "six==1.17.0",
    "soupsieve==2.6",
    "stable-baselines3>=2.6.0",
    "stack-data==0.6.3",
    "supersuit>=3.9.3",
    "tabulate==0.9.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.19.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==3.0.1",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomlkit==0.13.2",
    "toolz==1.0.0",
    "torch>=2.6.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "twine==6.1.0",
    "typing-extensions==4.13.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "yarg==0.1.9",
    "zipp==3.21.0",
]

[tool.isort]
profile = "google"
known_thirdparty = ["meltingpot"]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]

[tool.pytest.ini_options]
required_plugins = ["pytest-xdist"]
addopts = "-n auto"
testpaths = ["meltingpot", "examples"]

[tool.pytype]
python_version = "3.11"
inputs = ["meltingpot", "examples"]
# Keep going past errors to analyze as many files as possible.
keep_going = true
# Run N jobs in parallel. When 'auto' is used, this will be equivalent to the
# number of CPUs on the host system.
jobs = 'auto'
# Use the enum overlay for more precise enum checking. This flag is temporary
# and will be removed once this behavior is enabled by default.
use_enum_overlay = true
